Bug 187394 - [iOS] Assertion failure in WebProcessProxy::allProcesses() (isMainThread())
Summary: [iOS] Assertion failure in WebProcessProxy::allProcesses() (isMainThread())
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2018-07-06 10:18 PDT by mitz
Modified: 2018-07-06 11:27 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.33 KB, patch)
2018-07-06 10:27 PDT, Chris Dumez
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description mitz 2018-07-06 10:18:58 PDT
When running the iOS Mail app with TOT WebKit, WebProcessProxy::allProcesses() is called on the main thread, but because by then the Web thread has been initialized, the isMainThread() assertion fails. Perhaps allProcesses() should instead assert RunLoop::isMain().
Comment 1 Chris Dumez 2018-07-06 10:27:26 PDT
Created attachment 344426 [details]
Patch
Comment 2 WebKit Commit Bot 2018-07-06 11:25:23 PDT
The commit-queue encountered the following flaky tests while processing attachment 344426 [details]:

media/media-fullscreen-return-to-inline.html bug 187398 (authors: graouts@apple.com, mcatanzaro@igalia.com, and ryanhaddad@apple.com)
The commit-queue is continuing to process your patch.
Comment 3 WebKit Commit Bot 2018-07-06 11:26:06 PDT
Comment on attachment 344426 [details]
Patch

Clearing flags on attachment: 344426

Committed r233582: <https://trac.webkit.org/changeset/233582>
Comment 4 WebKit Commit Bot 2018-07-06 11:26:07 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Radar WebKit Bug Importer 2018-07-06 11:27:17 PDT
<rdar://problem/41900494>