[iOS] Assertion failure in WebProcessProxy::allProcesses() (isMainThread()) https://bugs.webkit.org/show_bug.cgi?id=187394

Reviewed by Dan Bernstein.

Use RunLoop::isMain() instead of isMainThread() in the assertion to fix issues for
applications using both WebKit and WebKitLegacy.

* UIProcess/WebProcessProxy.cpp:


Canonical link: https://commits.webkit.org/202653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233582 268f45cc-cd09-0410-ab3c-d52691b4dbfc